Updated to return json
